[package]
name = "flashtas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
com = { version = "0.6.0", features = ["production"] }
activex-rs = { path = '../activex-rs' }
lazy_static = "1.4.0"

[dependencies.windows]
version = "0.32.0"
features = [
    "alloc",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Ole",
    "Win32_System_Threading",
    "Win32_Graphics_Gdi"
]