[package]
name = "flashtas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
com = { version = "0.6.0", features = ["production"] }
activex-rs = { path = '../activex-rs' }
flashtas-format = { path = '../flashtas-format' }
lazy_static = "1.4.0"
clap = { version = "3.1.6", features = ["derive"] }
swf = { git = "https://github.com/ruffle-rs/ruffle" }
log = "0.4.14"
env_logger = "0.9.0"

[dependencies.windows]
version = "0.32.0"
features = [
    "alloc",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_LibraryLoader",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Ole",
    "Win32_System_Threading",
    "Win32_System_SystemInformation",
    "Win32_Graphics_Gdi",
    "Win32_Media",
]